@@ -1,4 +1,4 @@
-/* $Id: rtape.c,v 1.9.2.3.2.4 2009/12/18 11:33:44 uehira Exp $ */
+/* $Id: rtape.c,v 1.9.2.3.2.5 2010/02/17 08:33:20 uehira Exp $ */
 /*
   program "rtape.c"
   9/16/89 - 11/06/90, 6/26/91, 10/30/91, 6/26/92  urabe
@@ -50,7 +50,8 @@
   char name_file[NAMLEN],path[NAMLEN],textbuf[80],
     param_file[NAMLEN],name_prev[NAMLEN],dev_file[NAMLEN];
   FILE *f_param;
-  int e_ch[241]={
+/* moved to winlib.h */
+/*  int e_ch[241]={
     0x0000,0x0001,0x0002,0x0003,0x0004,0x0005,0x0006,0x0007,
     0x0008,0x0009,0x000A,0x000B,0x000C,0x000D,0x000E,0x000F,
     0x0010,0x0011,0x0012,0x0013,0x0014,0x0015,0x0016,0x0017,
@@ -81,7 +82,7 @@
     0x00D8,0x00D9,0x00DA,0x00DB,0x00DC,0x00DD,0x00DE,0x00DF,
     0x00E5,0x00E6,0x00E7,0x00E8,0x00E9,0x00EA,0x00EB,0x00EC,
     0x00ED,0x00EE,0x00EF,0x00F0,0x00F1,0x00F2,0x00F3,0x00F4,
-    0x00F5};
+    0x00F5};*/
 
 end_process(value)
   int value;
